--- a/manifests/frontend-deployment.yaml
+++ b/manifests/frontend-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         imagePullPolicy: Always
         env:
           - name: REACT_APP_APIHOSTPORT
-            value: $API_ELB_PUBLIC_FQDN #add your API_Load_Balancer DNS manually here if app does not run
+            value: a62516eada7de4d12a1bcfde9dcf5d85-1856477840.us-west-1.elb.amazonaws.com/ #add your API_Load_Balancer DNS manually here if app does not run
         ports:
         - containerPort: 8080
         livenessProbe:
